fixed alignment

--- a/css/style.css
+++ b/css/style.css
@@ -475,11 +475,16 @@ animation: fadeInAnimation ease 3s;
   padding-top: 10px;
   }
 
-  .catphoto, .catsImg img{
+  .catphoto{
     width:  300px;
     height: 300px;
     object-fit: cover;
     align-items: center;
     align-content: center;
   }
-
+  .catsImg img{
+    width:  400px;
+    height: 300px;
+    object-fit: cover;
+    align-items: center;
+    align-content: center; }
